lib_LTLIBRARIES = libccsoft.la

libccsoft_la_SOURCES = \
	CC_ReliabilityMatrix.cpp

#libccsoft_la_LIBADD = -lrt 

library_includedir=$(includedir)
library_include_HEADERS = \
	CC_ReliabilityMatrix.h \
	CCSoft_Exception.h \
	CC_Encoding.h \
	CC_SequentialDecoding.h \
	CC_FanoDecoding.h \
	CC_StackDecoding.h \
	CC_TreeEdge.h \
    CC_TreeNode.h \
    CC_TreeGraphviz.h \
    Debug.h