lib_LTLIBRARIES = libccsoft.la

libccsoft_la_SOURCES = \
	CC_ReliabilityMatrix.cpp \
	CC_Encoding.cpp

#libccsoft_la_LIBADD = -lrt 

library_includedir=$(includedir)
library_include_HEADERS = \
	CC_ReliabilityMatrix.h \
	CCSoft_Exception.h \
	CC_Encoding.h \
	CC_Encoding_FA.h \
	CC_SequentialDecoding.h \
	CC_SequentialDecoding_FA.h \
	CC_SequentialDecodingInternal.h \
	CC_SequentialDecodingInternal_FA.h \
	CC_FanoDecoding.h \
	CC_FanoDecoding_FA.h \
	CC_StackDecoding.h \
	CC_StackDecoding_FA.h \
	CC_TreeEdge.h \
    CC_TreeNode.h \
    CC_TreeNodeEdge.h \
    CC_TreeNodeEdge_FA.h \
    CC_TreeGraphviz.h \
    CC_TreeGraphviz_FA.h \
    Debug.h