lib_LTLIBRARIES = librssoft.la

librssoft_la_SOURCES = GFq.cpp \
    GFq_Element.cpp \
    GFq_Polynomial.cpp \
    GF2_Element.cpp \
    GF2_Polynomial.cpp \
    GFq_BivariateMonomial.cpp \
    GFq_BivariatePolynomial.cpp \
    GF_Utils.cpp \
	RS_ReliabilityMatrix.cpp \
	MultiplicityMatrix.cpp \
	GSKV_Interpolation.cpp \
	RR_Factorization.cpp \
    FinalEvaluation.cpp \
    EvaluationValues.cpp \
    RS_Encoding.cpp \
    RS_SystematicEncoding.cpp

#librssoft_la_LIBADD = -lrt 

library_includedir=$(includedir)
library_include_HEADERS = GFq.h \
    GFq_Element.h \
    GFq_Polynomial.h \
    GF2_Element.h \
    GF_Exception.h \
    GF2_Polynomial.h \
    GFq_BivariateMonomial.h \
    GFq_BivariatePolynomial.h \
    GF_Utils.h \
	RS_ReliabilityMatrix.h \
	MultiplicityMatrix.h \
	GSKV_Interpolation.h \
	RR_Factorization.h \
    FinalEvaluation.h \
    EvaluationValues.h \
    RS_Encoding.h \
    RS_SystematicEncoding.h
